@@ -1,6 +1,7 @@
 26. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
 	- icons for encryption related buttons added
 	- compare on TestInStream constructor fixed
+	- missing initalization of vars (bTAGreaded, bTAGexist, tnumber) at ReadMp3Tag class on constructor added
 
 25. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
 	- window title on borrow dialog fixed
